[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/HBar.gd" type="Script" id=1]
[ext_resource path="res://UI/Front.png" type="Texture" id=2]
[ext_resource path="res://UI/Back.png" type="Texture" id=3]

[node name="Control" type="Control"]
margin_top = -40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 1 )
script = ExtResource( 1 )

[node name="UpdateTween" type="Tween" parent="."]

[node name="HbarUnder" type="TextureProgress" parent="."]
anchor_left = -2.817
anchor_top = -2.723
anchor_right = 3.008
anchor_bottom = -1.843
margin_left = -166.0
margin_top = 141.84
margin_right = 1434.0
margin_bottom = 406.64
rect_scale = Vector2( 0.140233, 0.110846 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.545098, 0.0588235, 0.0352941, 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_left = -2.817
anchor_top = -2.723
anchor_right = 3.008
anchor_bottom = -1.843
margin_left = -166.0
margin_top = 141.84
margin_right = 1434.0
margin_bottom = 406.64
rect_scale = Vector2( 0.140233, 0.110846 )
value = 100.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.239216, 0.686275, 0.0588235, 1 )
